@@ -2,6 +2,8 @@
 - Add Filters tab/section using plugin API hook
 - Fix issue where folder selector wasn't visible on new filter form
 - Fix issue where multi-select fields were not visible in new filter action rows (#1489600)
+- Fix issue in displaying filter form when managesieve_kolab_master=true
+  and sieve variables extension is supported by the server (#1489599)
 
 * version 7.1 [2013-11-22]
 -----------------------------------------------------------
